--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Thêm vào file CSS chung hoặc trong thẻ <style> của component */
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#app {
+  height: 100%;
+}
